# secwager

./: .gitignore  CLAUDE.md  LICENSE  docker-compose.yml  go.work  go.work.sum  secwager.code-workspace
.github/: copilot-instructions.md
asio-fun/: CMakeLists.txt  vcpkg.json
asio-fun/src/: main.cpp
btcwatcher/: deposit_orchestration_readme.md  go.mod  go.sum
btcwatcher/cmd/btcwatcher/: main.go
btcwatcher/cmd/genaddr/: main.go
btcwatcher/db/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_add_reorged_at.down.sql  000002_add_reorged_at.up.sql
btcwatcher/internal/: cashierclient.go  fakes_test.go  integration_test.go  leader.go  script.go  spvnode.go  txstore.go  userstore.go  watcher.go  watcher_test.go
calculator/: CMakeLists.txt  CMakePresets.json  Dockerfile  vcpkg.json
calculator-client/: CMakeLists.txt  CMakePresets.json  vcpkg.json
calculator-client/include/: calculator_client.h  cpr_http_client.h  http_client.h
calculator-client/src/: calculator_client.cpp  cpr_http_client.cpp
calculator-client/tests/: calculator_client_test.cpp  mock_http_client.h
calculator/include/: calculator.h  calculator_controller.h
calculator/src/: calculator.cpp  calculator_controller.cpp  main.cpp
cashier/: CMakeLists.txt  CMakePresets.json  Dockerfile  docker-compose.yml  go.mod  vcpkg.json
cashier/cmd/cashier/: main.go
cashier/db/: changelog.yaml
cashier/db/migrations/: 000001_init.down.sql  000001_init.up.sql
cashier/include/: balance_service.h  cashier_controller.h  icashier.hpp
cashier/internal/: cashier.go  cashier_test.go  fake_cashier.go  integration_test.go  postgres_cashier.go  service.go
cashier/src/: balance_service.cpp  cashier_controller.cpp  cashier_service.hpp  etcd_lock.cpp  etcd_lock.hpp  main.cpp  postgres_cashier.cpp  postgres_cashier.hpp
cashier/tests/: cashier_test.cpp  integration_test.cpp
foo/: CMakeLists.txt
foo/include/: calculator.h
foo/src/: calculator.cpp  main.cpp
iac/bootstrap/: main.tf
iac/ephemeral/: backend.tf  data.tf  dev.tfvars  main.tf  outputs.tf  prod.tfvars  variables.tf
iac/foundation/: backend.tf  dev.tfvars  main.tf  outputs.tf  prod.tfvars  variables.tf
iac/modules/aurora/: main.tf  outputs.tf  variables.tf
iac/modules/cognito/: main.tf  outputs.tf
iac/modules/ecr/: main.tf  variables.tf
iac/modules/eks/: main.tf  outputs.tf  variables.tf
iac/modules/iam/: main.tf  outputs.tf
iac/modules/kms/: main.tf  variables.tf
iac/modules/msk/: main.tf  outputs.tf  variables.tf
iac/modules/vpc/: main.tf  variables.tf
lc/: main  main.cc
market/: CMakeLists.txt  CMakePresets.json  go.mod  go.sum  vcpkg.json
market/cmd/market/: main.go
market/include/: market_service.hpp
market/internal/service/: integration_test.go  service.go  service_test.go  snapshot.go  snapshot_test.go
market/proto/: market.proto
market/src/: main.cpp  market_service.cpp
market/tests/: market_service_test.cpp
matchengine/: CMakeLists.txt  Dockerfile  book.go  book_test.go  go.mod  types.go  vcpkg.json
matchengine/include/: engine.hpp
matchengine/proto/: book_snapshot.proto
matchengine/src/: engine.cpp
matchengine/tests/: engine_test.cpp
proto/: CMakeLists.txt  go.mod
proto/cashier/: cashier.proto
proto/market/: market.proto  market_snapshot.proto
proto/registry/: registry.proto
proto/secwager/: book_snapshot.proto  common.proto
proto/userregistration/: userregistration.proto
registry/: Dockerfile  go.mod  go.sum
registry/cmd/registry/: main.go
registry/data/: fixtures.json
registry/db/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_add_creator_id.down.sql  000002_add_creator_id.up.sql  000003_cascade_game_fks.down.sql  000003_cascade_game_fks.up.sql  000004_refdata_fetch_log.down.sql  000004_refdata_fetch_log.up.sql  000005_game_lineups.down.sql  000005_game_lineups.up.sql
registry/internal/: exports.go  hash.go  hash_test.go  instrstore.go  pgrefstore.go  postgres.go  proprules.go  refcache.go  refstore.go  service.go  service_test.go  validate.go
scripts/: init-db.sql
ui/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/envoy/: envoy.yaml
ui/k8s/: envoy-deployment.yaml
ui/scripts/: gen-proto.sh
ui/src/: App.tsx  main.tsx
ui/src/components/: Header.tsx  LeagueTabs.tsx
ui/src/components/Dashboard/: AccountSummary.tsx
ui/src/components/InstrumentBuilder/: GameSelector.test.tsx  GameSelector.tsx  LegBuilder.test.tsx  LegBuilder.tsx  LegList.test.tsx  LegList.tsx  SubmitBar.tsx  index.tsx
ui/src/components/InstrumentLookup/: InstrumentLookup.test.tsx  index.tsx
ui/src/components/MyInstruments/: InstrumentRow.tsx  index.tsx
ui/src/components/modals/: AuthModal.tsx  DepositModal.tsx
ui/src/grpc/: cashier.ts  registry.ts  transport.ts  userregistration.ts
ui/src/hooks/: useGames.ts  usePlayers.ts  usePropTypes.ts
ui/src/lib/: legDescription.ts  legValidation.test.ts  legValidation.ts
ui/src/store/: authStore.ts  builderStore.test.ts  builderStore.ts
userregistration/: Dockerfile  go.mod  go.sum
userregistration/cmd/userregistration/: main.go
userregistration/db/migrations/: 000001_init.up.sql
userregistration/internal/: cognito.go  integration_test.go  kms.go  service.go  service_test.go
vendor_refdata/: Dockerfile  go.mod  go.sum
vendor_refdata/cmd/vendor_refdata/: main.go
vendor_refdata/internal/: apisportsclient.go  eventfetcher.go  integration_test.go  mapping.go  mlb.go  mlbclient.go  mlbresults.go  nfl.go  nflresults.go  populator.go  soccer.go  soccerresults.go  store.go  timeutil.go
